# graceful-daemon

./: COPYING  README.md  meson.build
daemon/: Graceful.DBus.Daemon.vala  Graceful.DBusDaemon.vala  Graceful.PluginManager.vala  Main.vala  Makefile  graceful-daemon.h  meson.build
plugins/: meson.build
plugins/test/: Graceful.Plugin.test.vala  meson.build
src/: main.vala  meson.build
